<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherCondition</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_weather_report">WeatherReport</string>
    <string name="country_name">Country Name</string>
    <string name="DateTime">Date &amp; Time</string>
    <string name="Temp">Temperature</string>
    <string name="Pressure">Pressure</string>
    <string name="Chill">Chill</string>
</resources>
